tests/snapshots/help__api.snap
---
source: tests/help.rs
expression: "help_for(dir.path(), &[noun])"
---
Raw request against the API origin (escape hatch, GET by default)

Usage: cdctl api [OPTIONS] <path>

Arguments:
  <path>  Path relative to the API origin, query string included (e.g. '/access?device_id=abc')

Options:
  -X, --method <METHOD>    HTTP method (non-GET also requires --yes) [default: GET]
  -F, --field <key=value>  Form field (repeatable). Keys are sent literally — write 'hostnames[]=a'
                           yourself. Requires a non-GET -X
      --input <->          Read a JSON body from stdin, sent verbatim. "-" is the only accepted
                           value. Requires a non-GET -X
  -h, --help               Print help

Global options:
  -p, --profile <PK|name>  Profile to operate on (name or PK) [env: CONTROLD_PROFILE]
      --json               Emit JSON (full document) instead of a table
      --fields <a,b>       Comma-separated JSON fields to keep (implies --json)
      --plain              Tables without borders, for awk/cut
  -y, --yes                Skip confirmation prompts (ignored when the target profile is implicit)
      --no-retry           Disable automatic retries
      --timeout <SECS>     Per-request timeout in seconds
      --debug              Request/response trace on stderr (token always redacted)
