tests/snapshots/help__config.snap
---
source: tests/help.rs
expression: "help_for(dir.path(), &[noun])"
---
Read and write cdctl's own configuration

Usage: cdctl config [OPTIONS] <COMMAND>

Commands:
  get   Print one value (raw, not JSON)
  set   Set one value
  list  The active context, each value annotated with its source
  path  The config file path
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
  -p, --profile <PK|name>  Profile to operate on (name or PK) [env: CONTROLD_PROFILE]
      --json               Emit JSON (full document) instead of a table
      --fields <a,b>       Comma-separated JSON fields to keep (implies --json)
      --plain              Tables without borders, for awk/cut
  -y, --yes                Skip confirmation prompts (ignored when the target profile is implicit)
      --no-retry           Disable automatic retries
      --timeout <SECS>     Per-request timeout in seconds
      --debug              Request/response trace on stderr (token always redacted)
  -q, --quiet              Suppress info lines on stderr (warnings and errors still print)
