tests/snapshots/help__device.snap
---
source: tests/help.rs
expression: "help_for(dir.path(), &[noun])"
---
Manage the account's devices (the API calls them endpoints). A device is a resolver identity (DoH,
DoT, or dedicated IPs) that enforces a profile. Every write is verified by reading the device back,
because the API can acknowledge writes it did not apply.

Usage: cdctl device [OPTIONS] <COMMAND>

Commands:
  list    List devices
  get     Show one device by id or name
  update  Update a device (only the given fields change)
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
  -p, --profile <PK|name>
          Profile to operate on (name or PK) [env: CONTROLD_PROFILE]

      --json
          Emit JSON (full document) instead of a table

      --fields <a,b>
          Comma-separated JSON fields to keep (implies --json)

      --plain
          Tables without borders, for awk/cut

  -y, --yes
          Skip confirmation prompts (ignored when the target profile is implicit)

      --no-retry
          Disable automatic retries

      --timeout <SECS>
          Per-request timeout in seconds

      --debug
          Request/response trace on stderr (token always redacted)

  -q, --quiet
          Suppress info lines on stderr (warnings and errors still print)
