tests/snapshots/help__folder.snap
---
source: tests/help.rs
expression: help
---
Manage a profile's rule folders (API: groups)

Usage: cdctl folder [OPTIONS] <COMMAND>

Commands:
  list    List a profile's folders
  create  Create a folder (omitting --action makes an action-less folder)
  update  Rename a folder or change its action (sends only the flags given)
  delete  Delete a folder and its contained rules
  help    Print this message or the help of the given subcommand(s)

Options:
  -p, --profile <PK|name>  Profile to operate on (name or PK) [env: CONTROLD_PROFILE=]
      --json               Emit JSON (full document) instead of a table
      --fields <a,b>       Comma-separated JSON fields to keep; implies --json
      --plain              Tables without borders, for awk/cut
  -y, --yes                Skip confirmation prompts (ignored when the target profile is implicit)
      --no-retry           Disable automatic retries (GETs only ever retry)
      --timeout <SECS>     Per-request timeout in seconds
      --debug              Request/response trace on stderr; token always redacted
  -h, --help               Print help
