tests/snapshots/help__profile.snap
---
source: tests/help.rs
expression: "help_for(dir.path(), &[noun])"
---
Inspect the account's profiles. A profile is Control D's unit of DNS configuration. Rule and folder
commands operate within one, chosen with --profile or the config's default_profile.

Usage: cdctl profile [OPTIONS] <COMMAND>

Commands:
  list  List profiles
  get   Show one profile by id or name
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
  -p, --profile <PK|name>
          Profile to operate on (name or PK) [env: CONTROLD_PROFILE]

      --json
          Emit JSON (full document) instead of a table

      --fields <a,b>
          Comma-separated JSON fields to keep (implies --json)

      --plain
          Tables without borders, for awk/cut

  -y, --yes
          Skip confirmation prompts (ignored when the target profile is implicit)

      --no-retry
          Disable automatic retries

      --timeout <SECS>
          Per-request timeout in seconds

      --debug
          Request/response trace on stderr (token always redacted)

  -q, --quiet
          Suppress info lines on stderr (warnings and errors still print)
