tests/snapshots/help__reference.snap
---
source: tests/help.rs
expression: "help_for(dir.path(), &[noun])"
---
The full command surface as one Markdown document (works without a token)

Usage: cdctl reference [OPTIONS]

Options:
  -h, --help  Print help

Global options:
  -p, --profile <PK|name>  Profile to operate on (name or PK) [env: CONTROLD_PROFILE=]
      --json               Emit JSON (full document) instead of a table
      --fields <a,b>       Comma-separated JSON fields to keep (implies --json)
      --plain              Tables without borders, for awk/cut
  -y, --yes                Skip confirmation prompts (ignored when the target profile is implicit)
      --no-retry           Disable automatic retries
      --timeout <SECS>     Per-request timeout in seconds
      --debug              Request/response trace on stderr (token always redacted)
