tests/snapshots/help__reference_document.snap
---
source: tests/help.rs
expression: stdout
---
# cdctl reference

Manage a Control D account over its REST API: profiles, DNS rules, and rule folders, with JSON output for scripts and agents. Not ctrld, the Control D DNS daemon: that runs your DNS, cdctl manages your account.

## Global flags

- `-p, --profile <PK|name>` — Profile to operate on (name or PK) [env: CONTROLD_PROFILE]
- `--json` — Emit JSON (full document) instead of a table
- `--fields <a,b>` — Comma-separated JSON fields to keep (implies --json)
- `--plain` — Tables without borders, for awk/cut
- `-y, --yes` — Skip confirmation prompts (ignored when the target profile is implicit)
- `--no-retry` — Disable automatic retries
- `--timeout <SECS>` — Per-request timeout in seconds
- `--debug` — Request/response trace on stderr (token always redacted)
- `-q, --quiet` — Suppress info lines on stderr (warnings and errors still print)

## cdctl auth

Authenticate cdctl with an API token. Tokens are accepted from stdin or CONTROLD_API_TOKEN, never argv (a token in argv is world-readable).

### cdctl auth login

Store an API token read from stdin

- `--token-stdin` — Read the token from stdin

### cdctl auth status

Whether a token is configured, where from, and who it authenticates

### cdctl auth logout

Remove the stored token for the active context

## cdctl profile

Inspect the account's profiles. A profile is Control D's unit of DNS configuration. Rule and folder commands operate within one, chosen with --profile or the config's default_profile.

### cdctl profile list

List profiles

### cdctl profile get

Show one profile by id or name

- `<SELECTOR>` — Profile id or name (case-insensitive, an ambiguous name is an error)

## cdctl rule

Manage a profile's custom DNS rules: block, bypass, spoof, or redirect individual hostnames. Every write is verified by reading the profile back, because the API can acknowledge writes it did not fully apply.

### cdctl rule list

List a profile's rules

- `--folder <id|name>` — Folder id or name (omitted lists the whole profile)

### cdctl rule create

Create rules

- `<HOSTNAME>` — Hostnames to create (wildcards like *.example.com are legal)
- `--action <ACTION>` — Action to apply
- `--via <IP|CNAME|proxy>` — Spoof target (IP or CNAME), or the redirect proxy PK (cdctl api /proxies lists them)
- `--via6 <IPv6>` — Spoof-only IPv6 target (the API documents no via6 field on folders or the profile default)
- `--enabled` — Enable
- `--disabled` — Disable
- `--folder <id|name>` — Folder id or name to create the rules in
- `-n, --dry-run` — Print the planned mutation without writing anything

### cdctl rule update

Update rules (sends only the flags given — `PUT /rules` merges)

- `<HOSTNAME>` — Hostnames to update
- `--action <ACTION>` — Action to apply
- `--via <IP|CNAME|proxy>` — Spoof target (IP or CNAME), or the redirect proxy PK (cdctl api /proxies lists them)
- `--via6 <IPv6>` — Spoof-only IPv6 target (the API documents no via6 field on folders or the profile default)
- `--enabled` — Enable
- `--disabled` — Disable
- `--folder <id|name>` — Move to this folder (id or name)
- `--root` — Move back to the root, out of any folder
- `-n, --dry-run` — Print the planned mutation without writing anything

### cdctl rule delete

Delete rules

- `<HOSTNAME>` — Hostnames to delete
- `-n, --dry-run` — Print the planned mutation without writing anything

## cdctl folder

Manage a profile's rule folders (the API calls them groups). A folder groups rules and can carry a default action applied to the rules inside it.

### cdctl folder list

List a profile's folders

### cdctl folder create

Create a folder (omitting --action makes an action-less folder)

- `<NAME>` — Folder name
- `--action <ACTION>` — Action to apply
- `--via <IP|CNAME|proxy>` — Spoof target (IP or CNAME), or the redirect proxy PK (cdctl api /proxies lists them)
- `--via6 <IPv6>` — Spoof-only IPv6 target (the API documents no via6 field on folders or the profile default)
- `--enabled` — Enable
- `--disabled` — Disable
- `-n, --dry-run` — Print the planned mutation without writing anything

### cdctl folder update

Rename a folder or change its action (sends only the flags given)

- `<SELECTOR>` — Folder id or name (case-insensitive, an ambiguous name is an error)
- `--name <NAME>` — New name
- `--action <ACTION>` — Action to apply
- `--via <IP|CNAME|proxy>` — Spoof target (IP or CNAME), or the redirect proxy PK (cdctl api /proxies lists them)
- `--via6 <IPv6>` — Spoof-only IPv6 target (the API documents no via6 field on folders or the profile default)
- `--enabled` — Enable
- `--disabled` — Disable
- `-n, --dry-run` — Print the planned mutation without writing anything

### cdctl folder delete

Delete a folder and its contained rules

- `<SELECTOR>` — Folder id or name (case-insensitive, an ambiguous name is an error)
- `-n, --dry-run` — Print the planned mutation without writing anything

## cdctl config

Read and write cdctl's own configuration: the current context and each context's default profile. The file lives where `cdctl config path` points.

### cdctl config get

Print one value (raw, not JSON)

- `<KEY>` — Config key

### cdctl config set

Set one value

- `<KEY>` — Config key
- `<VALUE>` — New value

### cdctl config list

The active context, each value annotated with its source

### cdctl config path

The config file path

## cdctl api

Raw request against the API origin (escape hatch, GET by default)

- `<path>` — Path relative to the API origin, query string included (e.g. '/access?device_id=abc')
- `-X, --method <METHOD>` — HTTP method (non-GET also requires --yes)
- `-F, --field <key=value>` — Form field (repeatable). Keys are sent literally — write 'hostnames[]=a' yourself. Requires a non-GET -X
- `--input <->` — Read a JSON body from stdin, sent verbatim. "-" is the only accepted value. Requires a non-GET -X

## cdctl completions

Shell completion script (works without a token)

- `<SHELL>`

## cdctl reference

The full command surface as one Markdown document (works without a token)

## Environment

```
CONTROLD_API_TOKEN  API token (alternative to cdctl auth login)
CONTROLD_PROFILE    Profile to operate on, as --profile
CONTROLD_OUTPUT     "json" makes JSON the default output
```

## Exit codes

```
  0    ok
  1    generic error
  2    usage error
  3    not found
  4    auth
  5    forbidden / plan required
  6    conflict
  7    confirmation required
  8    retryable (the only retryable code)
  130  interrupted (SIGINT)
  141  broken pipe (SIGPIPE, Unix)
```
