tests/snapshots/help__root.snap
---
source: tests/help.rs
expression: root
---
Manage a Control D account over its REST API: profiles, DNS rules, and rule folders, with JSON
output for scripts and agents. Not ctrld, the Control D DNS daemon: that runs your DNS, cdctl
manages your account.

Usage: cdctl [OPTIONS] <COMMAND>

Commands:
  auth         Authenticate cdctl with an API token
  profile      Inspect the account's profiles
  rule         Manage a profile's DNS rules
  folder       Manage a profile's rule folders (API: groups)
  device       Inspect the account's devices (API: endpoints)
  config       Read and write cdctl's own configuration
  api          Raw request against the API origin (escape hatch, GET by default)
  completions  Shell completion script
  reference    The full command surface as one Markdown document
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global options:
  -p, --profile <PK|name>
          Profile to operate on (name or PK) [env: CONTROLD_PROFILE]

      --json
          Emit JSON (full document) instead of a table

      --fields <a,b>
          Comma-separated JSON fields to keep (implies --json)

      --plain
          Tables without borders, for awk/cut

  -y, --yes
          Skip confirmation prompts (ignored when the target profile is implicit)

      --no-retry
          Disable automatic retries

      --timeout <SECS>
          Per-request timeout in seconds

      --debug
          Request/response trace on stderr (token always redacted)

  -q, --quiet
          Suppress info lines on stderr (warnings and errors still print)

Examples:
  cdctl auth login --token-stdin < token.txt
  cdctl profile list
  cdctl rule create ads.example.com --action block --profile Home
  cdctl rule list --json

Environment:
  CONTROLD_API_TOKEN  API token (alternative to cdctl auth login)
  CONTROLD_PROFILE    Profile to operate on, as --profile
  CONTROLD_OUTPUT     "json" makes JSON the default output

Exit codes:
  0    ok
  1    generic error
  2    usage error
  3    not found
  4    auth
  5    forbidden / plan required
  6    conflict
  7    confirmation required
  8    retryable (the only retryable code)
  130  interrupted (SIGINT)
  141  broken pipe (SIGPIPE, Unix)
Docs and issues: https://github.com/joaodrp/controld-cli
